lots of fixes and experimental features

--- a/Config/config/alacritty/alacritty.toml
+++ b/Config/config/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
 [general]
-import = ["~/.config/alacritty/colors.toml"]
+import = ["~/afs/.confs/config/alacritty/colors.toml"]
 
 [window]
 opacity = 0.9
