name of nixos version is now showing up

--- a/Config/config/polybar/config.ini
+++ b/Config/config/polybar/config.ini
@@ -24,12 +24,10 @@ screenchange-reload           = true
 pseudo-transparency           = true
 
 [module/custom-menu]
-type                          = custom/text
-format                        = 
 format-foreground             = ${colors.primary}
-format-padding                = 1
-click-left                    = rofi -show drun -dpi 1
-click-right                   = exec ~/.config/scripts/powermenu.sh
+type = custom/script
+exec = bash -c 'os=$(cat /etc/salt/grains | head -1 | cut -d "-" -f 2 | tr a-z A-Z); echo "$os"'
+interval = 10000
 
 [module/xworkspaces]
 type                          = internal/xworkspaces
@@ -72,6 +70,7 @@ tray-size                     = 70%
 tray-spacing                  = 8pt
 
 [module/afssize]
+format-foreground             = ${colors.primary}
 type = custom/script
 exec = bash -c 'used=$(fs quota ~/afs | cut -d'%' -f1); total=$((2*1024*1024)); echo " $used%"'
 interval = 16
