added epidots logo

--- a/Config/config/polybar/config.ini
+++ b/Config/config/polybar/config.ini
@@ -26,7 +26,7 @@ pseudo-transparency           = true
 [module/custom-menu]
 format-foreground             = ${colors.primary}
 type = custom/script
-exec = bash -c 'os=$(cat /etc/salt/grains | head -1 | cut -d "-" -f 2 | tr a-z A-Z); echo "$os"'
+exec = bash -c 'os=$(cat /etc/salt/grains | head -1 | cut -d "-" -f 2 | tr a-z A-Z); echo " $os"'
 interval = 10000
 
 [module/xworkspaces]
